--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Abstract_Syntax_Tree)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Abstract_Syntax_Tree main.cpp)
+add_executable(Abstract_Syntax_Tree main.cpp interpreter.h)
